package apsara.odps.cupid.protocol;

option java_outer_classname = "YarnClientProtos";

message GetNewApplicationResponseProto {
  optional ApplicationIdProto application_id = 1;
  optional ResourceProto maximumCapability = 2;
}


message ApplicationIdProto {
  optional int32 id = 1;
  optional int64 cluster_timestamp = 2;
}


message ResourceProto {
  optional int32 memory = 1;
  optional int32 virtual_cores = 2;
}

